--- a/IBM_Project_diabetes_Prediction.ipynb
+++ b/IBM_Project_diabetes_Prediction.ipynb
@@ -35,6 +35,34 @@
       ]
     },
     {
+      "source": [
+        "# Diabetes Prediction using Logistic Regression\n",
+        "\n",
+        "This project demonstrates how to predict diabetes using a Logistic Regression model in Python. It uses the Pima Indians Diabetes dataset and involves data preprocessing, model training, evaluation, and visualization.\n",
+        "\n",
+        "## Dataset\n",
+        "\n",
+        "The Pima Indians Diabetes dataset is used in this project. It contains medical information about female patients of Pima Indian heritage and whether they have diabetes. The dataset is available in the `diabetes.csv` file.\n",
+        "\n",
+        "## Requirements\n",
+        "\n",
+        "To run this project, you'll need the following libraries:\n",
+        "\n",
+        "- NumPy\n",
+        "- Pandas\n",
+        "- Matplotlib\n",
+        "- Scikit-learn\n",
+        "\n",
+        "You can install these libraries using pip:"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "6zmvvevbvAHq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3q9U3S_whh3-"
@@ -713,6 +741,17 @@
           "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello\")"
+      ],
+      "metadata": {
+        "id": "LAVPkuI5yMgS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
